Harden authorization helpers and refresh utilities